# backend/src/routes/UserAssignments.ts
@@ -2,26 +2,26 @@ import { Router } from "express";
 import { checkAuthorization } from "../middlewares/authCheck";
 import createHttpError from "http-errors";
 
-export const userCourses = Router();
+export const userAssignments = Router();
 
 /**
 @openapi
-  /userCourse:
+  /userAssignment:
     get:
       tags:
         - user
       security:
         - cookieAuth: []
-      summary: Returns an array of user courses
+      summary: Returns an array of user course assignments
       responses:
         200:
-          description: an array of user courses
+          description: an array of user course assignments
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/UserCourse"
+                  $ref: "#/components/schemas/DegreeRequirementAssignment"
         401:
           description: Unauthorized
           content:
@@ -29,28 +29,28 @@ export const userCourses = Router();
               schema:
                 $ref: "#/components/schemas/FailureMessage"
  */
-userCourses.get("/userCourse", checkAuthorization, (req, res, next) => {
+userAssignments.get("/userAssignment", checkAuthorization, (req, res, next) => {
     const user = req.user;
     // TODO
-    next(createHttpError(501, "Not Implemented"));
+next(createHttpError(501, "Not Implemented"));
 });
 
 /**
 @openapi
-  /userCourse:
+/userAssignment:
     post:
       tags:
         - user
       security:
         - cookieAuth: []
-      summary: Add a user course
+      summary: Add a user course assignment
       requestBody:
-        description: the user course
+        description: the user course assignment
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UserCourse"
+              $ref: "#/components/schemas/DegreeRequirementAssignment"
       responses:
         200:
           description: Added successfully
@@ -65,34 +65,34 @@ userCourses.get("/userCourse", checkAuthorization, (req, res, next) => {
               schema:
                 $ref: "#/components/schemas/FailureMessage"
         401:
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/FailureMessage"
-*/
-userCourses.post("/userCourse", checkAuthorization, (req, res, next) => {
-    const user = req.user;
+            description: Unauthorized
+            content:
+                application/json:
+                schema:
+                    $ref: "#/components/schemas/FailureMessage"
+ */
+userAssignments.post("/userAssignment", checkAuthorization, (req, res, next) => {
     // TODO
-    next(createHttpError(501, "Not Implemented"));
+next(createHttpError(501, "Not Implemented"));
+    const user = req.user;
 });
 
 /**
 @openapi
-  /userCourse:
+/userAssignment:
     delete:
       tags:
         - user
       security:
         - cookieAuth: []
-      summary: Delete a user course
+      summary: Delete a user course assignment
       parameters:
-        - name: courseId
+        - name: assignmentId
           in: query
           required: true
           schema:
             type: string
-            example: COMPSCI|187
+            example: a random sequence of bytes as saved in the db
       responses:
         200:
           description: Deleted successfully
@@ -112,9 +112,9 @@ userCourses.post("/userCourse", checkAuthorization, (req, res, next) => {
             application/json:
               schema:
                 $ref: "#/components/schemas/FailureMessage"
-*/
-userCourses.delete("/userCourse", checkAuthorization, (req, res, next) => {
+    */
+userAssignments.delete("/userAssignment", checkAuthorization, (req, res, next) => {
     const user = req.user;
     // TODO
-    next(createHttpError(501, "Not Implemented"));
+next(createHttpError(501, "Not Implemented"));
 });
