# backend/src/swagger.yaml
@@ -88,6 +88,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Account"
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FailureMessage"
   /saveAccountDetails:
     post:
       security:
@@ -109,6 +115,12 @@ paths:
                 $ref: "#/components/schemas/SuccessMessage"
         400:
           description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FailureMessage"
+        401:
+          description: Unauthorized
           content:
             application/json:
               schema:
@@ -225,6 +237,12 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/UserCourse"
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FailureMessage"
     post:
       tags:
         - user
@@ -247,6 +265,12 @@ paths:
                 $ref: "#/components/schemas/SuccessMessage"
         400:
           description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FailureMessage"
+        401:
+          description: Unauthorized
           content:
             application/json:
               schema:
@@ -277,6 +301,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/FailureMessage"
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FailureMessage"
   /userAssignment:
     get:
       tags:
@@ -293,6 +323,12 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/DegreeRequirementAssignment"
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FailureMessage"
     post:
       tags:
         - user
@@ -319,6 +355,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/FailureMessage"
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FailureMessage"
     delete:
       tags:
         - user
@@ -341,6 +383,12 @@ paths:
                 $ref: "#/components/schemas/SuccessMessage"
         400:
           description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FailureMessage"
+        401:
+          description: Unauthorized
           content:
             application/json:
               schema:
@@ -372,6 +420,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/FailureMessage"
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FailureMessage"
     get:
       tags:
         - user
@@ -385,6 +439,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserSelectedArrConfigs"
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FailureMessage"
 
 components:
   schemas:
@@ -564,7 +624,7 @@ components:
       properties:
         message:
           type: string
-          example: success
+          example: fail
         error:
           type: string
           example: reason for error
